--- a/css/style.css
+++ b/css/style.css
@@ -2748,6 +2748,8 @@ div.image img{
 	display: block;
 	width: 100%;
 	height: 250px;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
 	-webkit-transition: all 500ms ease;
 	-moz-transition: all 500ms ease;
 	-ms-transition: all 500ms ease;
